# not-milk

./: .gitignore  Cargo.toml  README.md  build.gradle  lines.json  settings.gradle
.github/workflows/: ci.yml
infrastructure/: Cargo.toml
infrastructure/migrations/2023-03-16-184236_initial/: down.sql  up.sql
infrastructure/migrations/2023-03-17-221537_lines_and_channels/: down.sql  up.sql
infrastructure/migrations/2023-03-18-095943_more_info_about_activities/: down.sql  up.sql
infrastructure/migrations/2023-03-18-145346_suspensions/: down.sql  up.sql
infrastructure/migrations/2023-03-19-111619_making_lines_to_the_db_was_a_bad_idea/: down.sql  up.sql
infrastructure/migrations/2023-03-19-174538_non-fungible-milk/: down.sql  up.sql
infrastructure/migrations/2023-03-23-131328_actions/: up.sql
infrastructure/migrations/2023-03-25-093522_sell_nfm_attributes/: down.sql  up.sql
infrastructure/src/: lib.rs  models.rs  schema.rs
migrations/2023-03-03-151333_initial/: up.sql
migrations/2023-03-08-165140_alias-name-and-pfp/: down.sql  up.sql
server/: Cargo.toml
server/src/: main.rs
server/src/routes/: frontend.rs
src/: main.rs  models.rs  responses.rs  routes.rs  schema.rs
src/main/java/kz/ilotterytea/fembajbot/: Main.java  SharedConstants.java  TwitchBot.java
src/main/java/kz/ilotterytea/fembajbot/api/: Command.java  CommandLoader.java  ParsedMessage.java
src/main/java/kz/ilotterytea/fembajbot/builtin/: JoinCommand.java  PingCommand.java  SipCommand.java
src/main/java/kz/ilotterytea/fembajbot/entities/: Action.java  Channel.java  Consumer.java
src/main/java/kz/ilotterytea/fembajbot/schemas/: GlobalLines.java
src/main/java/kz/ilotterytea/fembajbot/utils/: HibernateUtil.java  MathUtils.java  ResourceUtils.java  StringUtils.java
src/main/resources/lines/: lines_en.json
static/: style.css
templates/: 404.html.hbs  index.html.hbs  leaderboard.html.hbs  search.html.hbs  user.html.hbs
twitch-bot/: Cargo.toml
twitch-bot/src/: handlers.rs  main.rs  structs.rs  utils.rs
twitch-bot/src/smol_commands/: give.rs  join.rs  mod.rs  mynfms.rs  nfm.rs  nfminfo.rs  place.rs  roulette.rs  sellnfm.rs  sip.rs  top.rs  yoink.rs
