[package]
name = "take-a-sip-of-tea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenvy = "0.15.6"
rand = "0.8.5"
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["full"] }
