[package]
name = "infrastructure"
version.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenvy = "0.15.6"
