[package]
name = "twitch-bot"
version.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
chrono = "0.4.24"
diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.6"
rand = "0.8.5"
reqwest = "0.11.14"
substring = "1.4.5"
tokio = { version = "1.26.0", features = ["full"] }
twitch-irc = "5.0.0"
twitch_api = { version = "0.7.0-rc.4", features = ["reqwest", "twitch_oauth2", "helix"] }
